public/fluxx_engine/theme/_common/sass/style.sass
@import ../../_common/css/ui-lightness/jquery-ui-1.8.2.custom.css
@import ../../_common/css/plupload/css/plupload.queue.css
@import _helpers

#colorbox
  color: white

=header-bg($bg: #333, $fg: #fff)
  +bg($bg, $fg)
=footer-bg($bg: #333, $fg: #fff)
  +bg($bg, $fg)
=body-bg($bg: #eee, $fg: #000)
  +bg($bg, $fg)

=pretty-forms
  label
    line-height: 24px
    border: 1px solid transparent
  input,select,textarea
    line-height: 24px
    padding: 0px 6px
  input,textarea
    +linear-gradient(#fcfcfc,#fff)
    +box-shadow-inset(0px,1px,2px,rgba(0,0,0,0.1))
  select
    height: 24px
    &[multiple=multiple]
      height: auto
body,table
  +default-font

div,ul,ol,li,table,tr,td,th,dl,dt,dd
  +border-box
.plupload, .plupload div,ul,ol,li,table,tr,td,th,dl,dt,dd
  +content-box

html,body
  margin: 0px
  padding: 0px
  height: 100%
  background: white
  color: black
body
  overflow-x: scroll

a img
  border: none

input,select,textarea
  border: 1px solid #ccc
  background: white

#fluxx
  #stage
    position: relative
    height: auto
    height: 100%
    min-height: 100%
    #header
      +header-bg
      height: $header_height
      position: fixed
      top: 0px
      width: 100%
      #logo
        +inline-block
      .actions
        +inline-block
        +non-list
        li
          +inline-block
          +non-list
          margin: 0px 10px 0px 10px
          vertical-align: top
    #card-table
      +body-bg(#ccc)
      margin-top: $header_height
      margin-bottom: $footer_height
      position: absolute
      top: 0px
      bottom: 0px
      overflow: hidden
      #hand
        +non-list
        height: 100%
        .card
          +inline-block
          margin: 10px
          position: relative
          .card-box
            .card-header
              +header-bg
              .toolbar
              .titlebar
                position: relative
                .title
            .card-body
              position: relative
              .tabular
                width: 100%
                thead
                  tr
                    th
                      .actions
                        +inline-block
                        float: right
              .filters
                position: absolute
                top: 0px
                bottom: 0px
                left: 0px
                right: 0px
                +bg(#333, #eee)
              .listing,.detail,.modal,.filters
                +inline-block
                vertical-align: top
                .header,.footer
                  &.empty
                    display: none
                .header
                  +header-bg(#666)
                .body
                  +bg
                  overflow: auto
                .footer
                  +footer-bg(#666)
              .listing
                width: 240px
                .header
                  .actions
                    +non-list
                    li
                      +inline-block
                .body
                  +bg(#f9f9f9)
                .footer
                  .paginate
                    +non-list
                    li
                      +inline-block
                  .no-pagination
                    text-align: center
                    width: 100%
              .detail
                width: 620px
                position: relative
                .body
              .modal
                +bg(#333,#fff)
                width: 450px
                position: absolute
                top: 0px
                left: 0px
                bottom: 0px
                .arrow
                  +bg(#333)
                  height: 25px
                  width: 25px
                  position: absolute
                  &.left
                    left: -25px
                    top: 0px
            .card-footer
              +footer-bg
          .info
            &.empty
              display: none
            width: 250px
            position: absolute
            top: 47px
            right: 1px
            bottom: 7px
            .drawer
              overflow: auto
              border-left: none
    #footer
      +footer-bg
      height: $footer_height
      position: fixed
      bottom: 0
      width: 100%
      #viewport
        +inline-block
      #quicklinks
        +inline-block
        position: absolute
        right: 0px
        top: 0px
      #iconlist,.qllist
        +non-list
        +inline-block
.dock
  .icon
    +inline-block
    position: relative
    .link
      +inline-block
      +border-box
      height: $icon_dimension
      width:  $icon_dimension
      margin: $icon_margin_top 10px $icon_margin_bottom 10px
      .label
        +ellipsis
        text-transform: uppercase
        padding: 0px 10px
        font-size: 8px
      .badge
    .popup
      display: none
        

